--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
     command: 'pack'
     packagesToPack: '**/*.csproj'
     versioningScheme: 'byEnvVar'
-    versionEnvVar: '$(project.build)'
+    versionEnvVar: '$(project.build-name)'
     verbosityPack: 'Diagnostic'
 
 - task: PublishBuildArtifacts@1
