--- a/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
@@ -15,4 +15,12 @@
     <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Gravity.Services.Comet" Version="2019.12.19.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="documentations\" />
+  </ItemGroup>
+
 </Project>
