--- a/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
@@ -16,11 +16,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Gravity.Services.Comet" Version="2019.12.19.1" />
+    <None Remove="Documentation\click.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="documentations\" />
+    <EmbeddedResource Include="Documentation\click.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Gravity.Services.Comet" Version="2019.12.19.1" />
   </ItemGroup>
 
 </Project>
