temporarily add mock web driver (migrate to a new repository when release is complete); click action implementation completed

--- a/src/csharp/Gravity.Actions/Gravity.Actions.Tests/Gravity.Services.ActionPlugins.Tests.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions.Tests/Gravity.Services.ActionPlugins.Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Gravity.Actions\Gravity.Services.ActionPlugins.csproj" />
+    <ProjectReference Include="..\Gravity.Drivers.Mock\Gravity.Drivers.Mock.csproj" />
   </ItemGroup>
 
 </Project>
