--- a/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
@@ -21,6 +21,7 @@
     <None Remove="Documentation\close-browser.json" />
     <None Remove="Documentation\context-click.json" />
     <None Remove="Documentation\double-click.json" />
+    <None Remove="Documentation\execute-script.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +30,7 @@
     <EmbeddedResource Include="Documentation\close-browser.json" />
     <EmbeddedResource Include="Documentation\context-click.json" />
     <EmbeddedResource Include="Documentation\double-click.json" />
+    <EmbeddedResource Include="Documentation\execute-script.json" />
   </ItemGroup>
 
   <ItemGroup>
