--- a/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
@@ -22,6 +22,7 @@
     <None Remove="Documentation\context-click.json" />
     <None Remove="Documentation\double-click.json" />
     <None Remove="Documentation\execute-script.json" />
+    <None Remove="Documentation\navigate-back.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -31,6 +32,7 @@
     <EmbeddedResource Include="Documentation\context-click.json" />
     <EmbeddedResource Include="Documentation\double-click.json" />
     <EmbeddedResource Include="Documentation\execute-script.json" />
+    <EmbeddedResource Include="Documentation\navigate-back.json" />
   </ItemGroup>
 
   <ItemGroup>
