--- a/src/csharp/Gravity.Actions/Gravity.Actions.Tests/Gravity.Services.ActionPlugins.Tests.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions.Tests/Gravity.Services.ActionPlugins.Tests.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\Gravity.Drivers.Mock\Gravity.Drivers.Mock.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="Mobile\" />
+    <Folder Include="Web\" />
+  </ItemGroup>
+
 </Project>
