Repeat plug-in ready for testing

--- a/src/csharp/Gravity.Actions/Gravity.Actions.Tests/Gravity.Services.ActionPlugins.Tests.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions.Tests/Gravity.Services.ActionPlugins.Tests.csproj
@@ -20,4 +20,10 @@
     <Folder Include="Mobile\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Resources\license.lcn">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
