--- a/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
@@ -27,6 +27,7 @@
     <None Remove="Documentation\navigate-forward.json" />
     <None Remove="Documentation\refresh.json" />
     <None Remove="Documentation\register-parameter.json" />
+    <None Remove="Documentation\repeat.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -41,10 +42,11 @@
     <EmbeddedResource Include="Documentation\navigate-forward.json" />
     <EmbeddedResource Include="Documentation\refresh.json" />
     <EmbeddedResource Include="Documentation\register-parameter.json" />
+    <EmbeddedResource Include="Documentation\repeat.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Gravity.Services.Comet" Version="2019.12.25.1" />
+    <PackageReference Include="Gravity.Services.Comet" Version="2019.12.29.1" />
   </ItemGroup>
 
   <ItemGroup>
