--- a/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
@@ -28,6 +28,7 @@
     <None Remove="Documentation\refresh.json" />
     <None Remove="Documentation\register-parameter.json" />
     <None Remove="Documentation\repeat.json" />
+    <None Remove="Documentation\send-keys.json" />
     <None Remove="Documentation\try-click.json" />
     <None Remove="Documentation\wait.json" />
   </ItemGroup>
@@ -45,6 +46,7 @@
     <EmbeddedResource Include="Documentation\refresh.json" />
     <EmbeddedResource Include="Documentation\register-parameter.json" />
     <EmbeddedResource Include="Documentation\repeat.json" />
+    <EmbeddedResource Include="Documentation\send-keys.json" />
     <EmbeddedResource Include="Documentation\try-click.json" />
     <EmbeddedResource Include="Documentation\wait.json" />
   </ItemGroup>
