--- a/src/csharp/Gravity.Actions/Gravity.Drivers.Mock/Gravity.Drivers.Mock.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Drivers.Mock/Gravity.Drivers.Mock.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Appium.WebDriver" Version="4.1.1" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
   </ItemGroup>
 
