--- a/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
@@ -23,13 +23,13 @@
     <None Remove="Documentation\context-click.json" />
     <None Remove="Documentation\double-click.json" />
     <None Remove="Documentation\execute-script.json" />
-    <None Remove="Documentation\geo-location.json" />
     <None Remove="Documentation\navigate-back.json" />
     <None Remove="Documentation\navigate-forward.json" />
     <None Remove="Documentation\refresh.json" />
     <None Remove="Documentation\register-parameter.json" />
     <None Remove="Documentation\repeat.json" />
     <None Remove="Documentation\send-keys.json" />
+    <None Remove="Documentation\set-geo-location.json" />
     <None Remove="Documentation\try-click.json" />
     <None Remove="Documentation\wait.json" />
   </ItemGroup>
@@ -42,7 +42,7 @@
     <EmbeddedResource Include="Documentation\context-click.json" />
     <EmbeddedResource Include="Documentation\double-click.json" />
     <EmbeddedResource Include="Documentation\execute-script.json" />
-    <EmbeddedResource Include="Documentation\geo-location.json" />
+    <EmbeddedResource Include="Documentation\set-geo-location.json" />
     <EmbeddedResource Include="Documentation\navigate-back.json" />
     <EmbeddedResource Include="Documentation\navigate-forward.json" />
     <EmbeddedResource Include="Documentation\refresh.json" />
@@ -54,6 +54,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Gravity.Services.Comet" Version="2019.12.30.1" />
+    <PackageReference Include="Gravity.Services.Comet" Version="2020.1.4.1" />
   </ItemGroup>
 </Project>
