--- a/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net451;net46;netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <PackageId>Gravity.Services.Actions</PackageId>
     <LangVersion>latest</LangVersion>
     <Version>5.0.0</Version>
@@ -54,6 +54,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Gravity.Services.Comet" Version="2020.1.4.1" />
+    <PackageReference Include="Gravity.Services.Comet" Version="2020.1.9.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.0" />
   </ItemGroup>
 </Project>
