--- a/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Services.ActionPlugins.csproj
@@ -25,6 +25,7 @@
     <None Remove="Documentation\elements-listener.json" />
     <None Remove="Documentation\execute-script.json" />
     <None Remove="Documentation\get-screenshot.json" />
+    <None Remove="Documentation\hide-keyboard.json" />
     <None Remove="Documentation\keyboard.json" />
     <None Remove="Documentation\navigate-back.json" />
     <None Remove="Documentation\navigate-forward.json" />
@@ -47,6 +48,7 @@
     <EmbeddedResource Include="Documentation\double-click.json" />
     <EmbeddedResource Include="Documentation\execute-script.json" />
     <EmbeddedResource Include="Documentation\get-screenshot.json" />
+    <EmbeddedResource Include="Documentation\hide-keyboard.json" />
     <EmbeddedResource Include="Documentation\keyboard.json" />
     <EmbeddedResource Include="Documentation\set-geo-location.json" />
     <EmbeddedResource Include="Documentation\navigate-back.json" />
