--- a/src/csharp/Gravity.Actions/Gravity.Drivers.Mock/Gravity.Drivers.Mock.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Drivers.Mock/Gravity.Drivers.Mock.csproj
@@ -1,12 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <RootNamespace>OpenQA.Selenium</RootNamespace>
+    <PackageId>Gravity.Drivers.Mock</PackageId>
+    <Title>Gravity, Mock Web Driver - Selenium and Appium Mocking</Title>    
+    <Description>Mock implementation of IWebDriver which does not open a browser, for high performance testing of Selenium based frameworks, without a dependency on browsers and web drivers.</Description>
+    <PackageTags>automation,crawling,crawl,selenium,appium,automation testing,automation test,qa,gravity,gravity api,scrapping,scrap</PackageTags>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
+    <Authors>Roei.Sabag;gravity.customer-services</Authors>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Appium.WebDriver" Version="4.1.1" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
   </ItemGroup>
-
 </Project>
