standard naming (single word)

--- a/src/csharp/Gravity.Actions/Gravity.Actions.Tests/Gravity.Plugins.Actions.UnitTests.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions.Tests/Gravity.Plugins.Actions.UnitTests.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Gravity.Actions\Gravity.Services.ActionPlugins.csproj" />
+    <ProjectReference Include="..\Gravity.Actions\Gravity.Plugins.Actions.csproj" />
     <ProjectReference Include="..\Gravity.Drivers.Mock\Gravity.Drivers.Mock.csproj" />
   </ItemGroup>
 
