--- a/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Plugins.Actions.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Plugins.Actions.csproj
@@ -2,10 +2,9 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-    <PackageId>Gravity.Services.Actions</PackageId>
+    <PackageId>Gravity.Plugins.Actions</PackageId>
     <LangVersion>latest</LangVersion>
-    <Version>5.0.0</Version>
-    <Title>Gravity.Services.Actions</Title>
+    <Title>Gravity API - Action Plugins Package</Title>
     <Authors>Roei.Sabag</Authors>
     <Description>Gravity API Actions repository. FREE register at "https://g-api.azurewebsites.net/Identity/Account/Register" in order to be able to use Gravity API.</Description>
     <PackageTags>automation,crawling,crawl,selenium,appium,automation testing,automation test,qa,gravity,gravity api,scrapping,scrap</PackageTags>
@@ -14,32 +13,6 @@
     <PackageProjectUrl>https://github.com/gravity-api/gravity-actions</PackageProjectUrl>
     <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="Documentation\click.json" />
-    <None Remove="Documentation\close-all-child-windows.json" />
-    <None Remove="Documentation\close-browser.json" />
-    <None Remove="Documentation\close-window.json" />
-    <None Remove="Documentation\context-click.json" />
-    <None Remove="Documentation\double-click.json" />
-    <None Remove="Documentation\elements-listener.json" />
-    <None Remove="Documentation\execute-script.json" />
-    <None Remove="Documentation\get-screenshot.json" />
-    <None Remove="Documentation\hide-keyboard.json" />
-    <None Remove="Documentation\keyboard.json" />
-    <None Remove="Documentation\long-swipe.json" />
-    <None Remove="Documentation\navigate-back.json" />
-    <None Remove="Documentation\navigate-forward.json" />
-    <None Remove="Documentation\refresh.json" />
-    <None Remove="Documentation\register-parameter.json" />
-    <None Remove="Documentation\repeat.json" />
-    <None Remove="Documentation\select-from-combo-box.json" />
-    <None Remove="Documentation\send-keys.json" />
-    <None Remove="Documentation\set-geo-location.json" />
-    <None Remove="Documentation\submit-form.json" />
-    <None Remove="Documentation\try-click.json" />
-    <None Remove="Documentation\wait.json" />
-  </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Documentation\elements-listener.json" />
