--- a/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Plugins.Actions.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Plugins.Actions.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Gravity.Core" Version="2020.2.2.1" />
     <PackageReference Include="Gravity.Services.Comet" Version="2020.1.22.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.1" />
   </ItemGroup>
