SwitchToWindow implemented; better constants implementation

--- a/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Plugins.Actions.csproj
+++ b/src/csharp/Gravity.Actions/Gravity.Actions/Gravity.Plugins.Actions.csproj
@@ -15,8 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Documentation\switch-to-alert.json" />
-    <None Remove="Documentation\switch-to-default-content.json" />
+    <None Remove="Documentation\switch-to-window.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -43,6 +42,7 @@
     <EmbeddedResource Include="Documentation\submit-form.json" />
     <EmbeddedResource Include="Documentation\switch-to-alert.json" />
     <EmbeddedResource Include="Documentation\switch-to-default-content.json" />
+    <EmbeddedResource Include="Documentation\switch-to-window.json" />
     <EmbeddedResource Include="Documentation\try-click.json" />
     <EmbeddedResource Include="Documentation\wait.json" />
   </ItemGroup>
