--- a/src/csharp/Gravity.Plugins.Actions/Gravity.Plugins.Actions.Tests/Gravity.Plugins.Actions.UnitTests.csproj
+++ b/src/csharp/Gravity.Plugins.Actions/Gravity.Plugins.Actions.Tests/Gravity.Plugins.Actions.UnitTests.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Gravity.Actions\Gravity.Plugins.Actions.csproj" />
+    <ProjectReference Include="..\Gravity.Plugins.Actions\Gravity.Plugins.Actions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
