--- a/src/csharp/Gravity.Plugins.Actions/Gravity.Plugins.Actions/Gravity.Plugins.Actions.csproj
+++ b/src/csharp/Gravity.Plugins.Actions/Gravity.Plugins.Actions/Gravity.Plugins.Actions.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <None Remove="Documentation\scroll.json" />
+    <None Remove="Documentation\swipe.json" />
     <None Remove="Documentation\switch-to-frame.json" />
     <None Remove="Documentation\switch-to-window.json" />
     <None Remove="Documentation\try-send-keys.json" />
@@ -37,6 +38,7 @@
     <EmbeddedResource Include="Documentation\get-screenshot.json" />
     <EmbeddedResource Include="Documentation\hide-keyboard.json" />
     <EmbeddedResource Include="Documentation\keyboard.json" />
+    <EmbeddedResource Include="Documentation\swipe.json" />
     <EmbeddedResource Include="Documentation\long-swipe.json" />
     <EmbeddedResource Include="Documentation\scroll.json" />
     <EmbeddedResource Include="Documentation\select-from-combo-box.json" />
